# PhaseGuidedControl

./: .gitignore  LICENSE  README.md
cfg/: default_cfg.yaml
controller/CPG_Controller/: CMakeLists.txt  CPG_Controller.cpp  CPG_Controller.hpp  CPG_UserParameters.h  GaitGenerator.hpp  InverseKinematics_v2.hpp  Lstm.hpp  NN_log.hpp  main.cpp
controller/ManualPhase_Controller/: CMakeLists.txt  CPG.hpp  Lstm.hpp  ManualPhase.hpp  ManualPhase_Controller.cpp  ManualPhase_Controller.hpp  ManualPhase_UserParameters.h  csv_to_eigen.hpp  main.cpp
rsc/urdf/: black_panther.urdf
rsc/urdf/meshes/: body.dae  bp5_abad.dae  bp_abad2.dae  bp_body2.dae
scripts/: PPO2.py  RaisimGymVecEnvLstm.py  commanded_locomotion_lstm.py  dump_params.py  params_to_csv.py  retrain_lstm.py
src/: CPG.hpp  Environment.hpp  ManualPhase.hpp  raisimCustomizedImguiPanel.hpp
