include_directories("../../robot/include")
include_directories("../../common/include/")
include_directories("../../lcm-types/cpp")
include_directories(${CMAKE_BINARY_DIR})
include_directories(../../third-party/XsensImu/include/)
link_directories(../../third-party/XsensImu/lib/)
add_executable(mp_ctrl main.cpp ManualPhase_Controller.cpp)
target_link_libraries(mp_ctrl robot biomimetics dynacore_param_handler)
if (IS_XSENS)
    target_link_libraries(mp_ctrl robot biomimetics dynacore_param_handler XsensImu)
else (IS_XSENS)
    target_link_libraries(mp_ctrl robot biomimetics dynacore_param_handler)
endif (IS_XSENS)
